# app/controllers/general_specifications_controller.rb
@@ -1,10 +1,10 @@
 class GeneralSpecificationsController < SpecificationsController
+
   def create
-    @product = Product.find(params[:product_id])
-    @general_specification = @product.general_specifications.new(general_specification_params)
+    @general_specification = @product.specifications.build(general_specification_params)
 
     if @general_specification.save
-      render json: @general_specification, status: :created, location: @general_specification
+      render json: @general_specification, status: :created, location: product_general_specification_url(@product, @general_specification)
     else
       render json: @general_specification.errors, status: :unprocessable_entity
     end
